# scienta-interview

./: .gitignore  Makefile  notebook.py  pyproject.toml  tune_hyperparameters.py
src/scienta/: __init__.py  trainer.py  tune_config.py  utils.py
src/scienta/config/: tune_config.py
src/scienta/datasets/: __init__.py  anndataset.py
src/scienta/models/: __init__.py  invae.py
tests/: test_datasets.py  test_integration.py  test_models.py  test_trainer.py  test_utils.py
