[project]
name = "scienta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jelkhouryy", email = "jean.el-khoury@owkin.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "mlflow>=3.3.2",
    "mypy>=1.17.1",
    "pydoclint>=0.7.3",
    "ruff>=0.12.12",
    "scanpy>=1.11.4",
    "scikit-network>=0.33.3",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "zarr>=2.18.3",
]

[project.scripts]
scienta = "scienta:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
